rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_semicolon_newlines.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_semicolon_newlines), \"foo\n\n\n\n    \")"
---
error: Expected ';'
  ┌─ missing_semicolon_newlines:1:4
  │
1 │ foo
  │    ^ Expected ';'
